# S1mplePicEditor-PKUQtHomework

./: LICENSE  README.md
sourcecode/S1mpleBMPEditor/: CMakeLists.txt  adjustdialog.cpp  adjustdialog.h  adjustdialog.ui  clickablewidget.cpp  clickablewidget.h  clickablewidget.ui  clickimagedialog.cpp  clickimagedialog.h  contrastdialog.cpp  contrastdialog.h  contrastdialog.ui  cropwindow.cpp  cropwindow.h  cropwindow.ui  drawmosaicdialog.cpp  drawmosaicdialog.h  imagelabel.cpp  imagelabel.h  importwindow.cpp  importwindow.h  importwindow.ui  lightnessdialog.cpp  lightnessdialog.h  lightnessdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mosaicdialog.cpp  mosaicdialog.h  mosaicdialog.ui  pensettingdialog.cpp  pensettingdialog.h  penwindow.cpp  penwindow.h  processimage.cpp  processimage.h  recentfileswindow.cpp  recentfileswindow.h  (+14 more)
